update loadin title

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         font-weight: 600;
         font-size: 36px;
         /* text-transform: uppercase; */
-        left: calc(50% - 20px);
+        left: calc(50% - 10px);
         top: 55%;
         margin-left: -20px;
       }
@@ -312,7 +312,7 @@
           <span></span>
           <span></span>
         </div>
-        <h1 class="loader-title">CK Admin</h1>
+        <h1 class="loader-title">ck cms</h1>
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
